--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Victor Biscio</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="navBar">
@@ -34,17 +35,6 @@
           </p>
           <img class="aboutImg" src="http://placekitten.com/200/300" />
         </div>
-        <div class="myInfo">
-            <div class="email">
-                <p>Email</p>
-            </div>
-            <div class="linkedin">
-                <p>LinkedIn
-                </p>
-            </div>
-            <div class="github"><p>GitHub</p></div>
-            <div class="phone"><p>Phone</p></div>
-        </div>
       </section>
       <section id="skills">
         <div class="skillsEl">
@@ -64,24 +54,67 @@
       </section>
       <section id="projects">
         <div class="projectsEl">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic quidem
-            enim at voluptatem adipisci aspernatur accusamus, repudiandae a
-            corporis porro? Aliquid aspernatur totam, eius blanditiis magnam ab
-            excepturi sequi veritatis.
-          </p>
+
+<div class="worksEl">
+<div><span style="padding: 20px; margin: 10px; background-color: var(--lightGray);"><img src="http://placekitten.com/200/300"></span>
+<p>Project 1</p></div>
+<div><span style="padding: 20px; margin: 10px;  background-color: var(--lightGray);"><img src="http://placekitten.com/200/300"></span>
+  <p>Project 2</p></div>
+</div>
+<div class="worksElSec">
+<div><span style="padding: 20px; margin: 10px; background-color: var(--lightGray);"><img src="http://placekitten.com/200/300"></span>
+  <p>Project 3</p></div>
+<div ><span style="padding: 20px; margin: 10px; background-color: var(--lightGray);"><img src="http://placekitten.com/200/300"></span>
+  <p>Project 4</p></div>
+</div>
+
+
+
         </div>
       </section>
       <section id="contact">
         <div class="contactEl">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil sequi
-            velit minima, accusamus dolor, eum quos laborum inventore fugit
-            aperiam vel doloribus pariatur! Fugiat tempora dicta eaque
-            perferendis provident laboriosam!
-          </p>
+          <div>
+            <div class="contactForm">
+                <div>
+                    <h1 id="Contact">Get in touch</h1>
+                </div>
+                <div>
+                    <div >
+                      <form name="contact" method="POST" data-netlify="true">
+                        <p>
+                          <label> <input type="text" name="name" placeholder="Your Name" /></label>
+                        </p>
+                        <p>
+                          <label><input type="email" name="email" placeholder="Your Email"/></label>
+                        </p>
+                        <p>
+                          <label></label> <textarea name="message" placeholder="Message"></textarea></label>
+                        </p>
+                        <p>
+                          <button class="formBtn" type="submit">Send Message</button>
+                        </p>
+                      </form>
+                      
+                    </div>
+                    <div>
+                        <div class="socials">
+                          <a href="#" class="fa fa-linkedin"></a>
+                            <a href="#" class="fa fa-google"></a>
+                            <a href="*" class="fa social fa-github"></a>
+                        </div>
+                        <a title="Download Resume" href="*" download><i></i></a>
+                    </div>
+                </div>
+            </div>
+          </div>
         </div>
       </section>
+      <footer>
+        <div>
+          <p id="not-dark">2023 © Victor Biscio. All Rights Reserved</p>
+      </div>
+    </footer>
     </div>
   </body>
 </html>
